force-app/main/default/objects/Asset/fields/Asset_Logo__c.field-meta.xml
<CustomField>
    <fullName>Asset_Logo__c</fullName>
    <label>Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>