force-app/main/default/objects/Asset/fields/End_Warranty__c.field-meta.xml
<CustomField>
    <fullName>End_Warranty__c</fullName>
    <label>End Warranty</label>
    <type>Date</type>
</CustomField>