force-app/main/default/objects/Asset/fields/Producer_Informations__c.field-meta.xml
<CustomField>
    <fullName>Producer_Informations__c</fullName>
    <label>Producer Informations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>