force-app/main/default/objects/Asset/fields/Supplier_site__c.field-meta.xml
<CustomField>
    <fullName>Supplier_site__c</fullName>
    <label>Supplier Site</label>
    <type>Url</type>
</CustomField>