force-app/main/default/objects/Asset/fields/YouTube_ID__c.field-meta.xml
<CustomField>
    <fullName>YouTube_ID__c</fullName>
    <description>The YouTube video&apos;s ID which is needed to be displayed on record level.</description>
    <label>YouTube ID</label>
    <type>TextArea</type>
</CustomField>